# akari

./: .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  pyproject.toml
akari/: __main__.py  main.py
akari/bot/: bot.py  client.py  utils.py
akari/bot/commands/: __init__.py  aicmd.py  deepwiki.py  general.py  syscmd.py  utilcmd.py  utility.py
akari/bot/core/: __init__.py  bot.py  commands.py  decorators.py  events.py  models.py
akari/bot/services/: __init__.py  ai_service.py  base.py
akari/bot/utils/: __init__.py  embeds.py  error_handler.py  formatters.py
akari/config/: settings.py
akari/plugins/: __init__.py  admin_plugin.py  baoyan_plugin.py  gemini_plugin.py  meme_plugin.py  openweaponscase_plugin.py  restart_plugin.py  rss_plugin.py  wiki_plugin.py
akari/plugins/admin/: __init__.py  decorators.py  manager.py  models.py  plugin.py
akari/plugins/ebooks/: config.py  models.py  plugin.py  service.py  zlibrary_client.py
akari/plugins/ebooks/annas_py/: utils.py
akari/plugins/ebooks/annas_py/extractors/: __init__.py  download.py  generic.py  search.py
akari/plugins/ebooks/annas_py/models/: args.py  data.py
akari/plugins/galgame/: __init__.py  cache.py  exceptions.py  models.py  plugin.py  utils.py
akari/plugins/magnet_preview/: __init__.py  config.py  plugin.py  service.py  utils.py
akari/plugins/manga_downloader/: __init__.py  config.py  option.yml  plugin.py  service.py
akari/plugins/meme/: __init__.py  manager.py  models.py  plugin.py  utils.py
data/admin/: admin_config.json
data/baoyan/: known_programs.json
data/galgame/: README.md  config.json
data/meme/: meme_templates.md
data/openweaponscase/: open_history.json
data/rss/: rss_config.json  rss_data.json
