[project]
name = "akari"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.5.2",
    "google-generativeai>=0.8.5",
    "psutil>=7.0.0",
    "python-dotenv>=1.1.0",
]

[project.scripts]
akari = "akari.main:main"
